--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <script src="script.js"></script>
     <audio id="bg-music" autoplay loop style="display: none;">
-        <source src="https://raw.githubusercontent.com/BlackButterFly0908/Will/main/Misteryoso%20-%20Cup%20of%20Joe%20(Official%20Lyric%20Video).mp3" type="audio/mpeg">
+        <source src="Misteryoso - Cup of Joe (Official Lyric Video).mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
       
