--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <script src="script.js"></script>
     <audio id="bg-music" autoplay loop style="display: none;">
-        <source src="Misteryoso - Cup of Joe (Official Lyric Video).mp3" type="audio/mpeg">
+        <source src="misteryoso_cup_of_joe.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
       
