--- a/index.html
+++ b/index.html
@@ -18,22 +18,18 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <audio id="bg-music" autoplay loop muted style="display: none;">
+<audio id="bg-music" loop style="display: none;">
     <source src="misteryoso_cup_of_joe.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
 <script>
-  window.onload = function() {
+  document.addEventListener("click", function() {
     const audio = document.getElementById("bg-music");
-
-    // Start playback muted (to bypass autoplay restrictions)
-    audio.play().then(() => {
-      audio.muted = false; // Unmute after playing
-    }).catch(error => {
-      console.log("Autoplay blocked: User interaction needed.");
-    });
-  };
+    if (audio.paused) {
+      audio.play().catch(error => console.log("Playback failed:", error));
+    }
+  }, { once: true }); // Ensures it only triggers once
 </script>
 
 </body>
